fix scrollbar padding

--- a/css/vimu.css
+++ b/css/vimu.css
@@ -216,7 +216,6 @@ canvas {
 
 #drop-zone {
     position: absolute;
-    /* position: fixed; */
     bottom:0;
     padding-top: 15px;
     margin-bottom: 15px;
@@ -300,7 +299,7 @@ p.soundname {
 
 .scrollbar {
     float: left;
-    height: 240px;
+    height: 250px;
     width: inherit;
     overflow-y: auto;
     /* margin-bottom: 25px; */
